--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Etch-a-Sketch The Odin Project</title>
 </head>
 <body>
-    
+    <div id="container">
+    </div>
 </body>
+<script src="script.js"></script> 
 </html>
