--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Etch-a-Sketch The Odin Project</title>
 </head>
 <body>
+    <button class="btn" onclick="setSquares()">Resize</button>
     <div id="container">
     </div>
 </body>
